--- a/src/components/SearchCity/SearchCity.scss
+++ b/src/components/SearchCity/SearchCity.scss
@@ -2,11 +2,7 @@
 
 #search {
   width: 100%;
-  &:focus {
-    .city-tips {
-      padding: 0.5rem;
-    }
-  }
+  padding: 0 0.5rem;
 }
 
 .search {
@@ -28,20 +24,26 @@
 }
 
 .city-tips {
-  font-size: 1.1rem;
-  left: 1%;
+  font-size: 1rem;
+  left: 1rem;
   top: 75%;
-  width: 98%;
+  width: calc(100% - 2rem);
   position: absolute;
   background-color: #08294c6a;
   backdrop-filter: blur(5px);
   li {
+    margin: 0.5rem;
+    margin-bottom: 1rem;
     list-style-type: none;
     cursor: pointer;
-    margin-bottom: 0.5rem;
-    border-bottom: 0.1rem dashed var.$color-3;
+    border-bottom: 0.15rem dashed var.$color-3;
+
     &:hover {
       text-decoration: underline;
+    }
+
+    &:first-child {
+      margin-top: 1rem;
     }
   }
 }
