--- a/src/components/Weather/Weather.scss
+++ b/src/components/Weather/Weather.scss
@@ -1,15 +1,18 @@
 @use '../../assets/scss/variables' as var;
+@use '../../assets/scss/mixins' as mi;
 
 .weather-temperature-icon {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
   div {
     display: grid;
     grid-template: repeat(2, 1fr) / repeat(2, 1fr);
     grid-template-areas:
       'weather-temperature umbrella'
       'weather-temperature clothing-tips';
+
     img {
       width: 2rem;
       height: auto;
@@ -52,10 +55,12 @@
   background: var.$color-4;
   flex-grow: 1;
   cursor: pointer;
+
   ul {
     height: 100%;
     display: flex;
     justify-content: space-between;
+
     li {
       gap: 0.5rem;
       flex-grow: 1;
@@ -64,12 +69,14 @@
       flex-direction: column;
       justify-content: space-between;
       align-items: center;
-      border-right: 0.2rem solid var.$color-3;
-      border-bottom: 0.2rem solid var.$color-3;
+      @include mi.borderRight;
+      @include mi.borderBottom;
+
       &:last-child {
         border-right: none;
       }
     }
+
     .active-day {
       p {
         text-shadow: 2px 2px 20px var.$color-1;
@@ -81,6 +88,10 @@
 
 .forecast-day {
   font-weight: 600;
+}
+
+.forecast-day-short {
+  display: none;
 }
 
 .forecast-weakened {
@@ -107,7 +118,7 @@
   color: #d6d6d6;
 }
 
-.forecast-temp {
+.forecast-temp-hour {
   margin-top: 0.6rem;
   font-size: 1.2rem;
   font-weight: 600;
@@ -118,10 +129,12 @@
   padding: 1rem;
   flex-grow: 1;
   background-color: var.$color-2;
+
   p {
     text-shadow: 2px 2px 20px var.$color-1;
     margin-bottom: 0.2rem;
   }
+
   ul {
     height: 100%;
     display: grid;
@@ -130,6 +143,7 @@
     justify-content: space-between;
     grid-gap: 1rem;
   }
+
   li {
     display: flex;
     flex-direction: column;
@@ -154,12 +168,16 @@
   .forecast-calendar {
     height: auto;
     width: 50%;
+
     ul {
       flex-direction: column;
+
       li {
+        gap: 0;
         height: 7rem;
         max-width: none;
         display: grid;
+        place-items: center;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(4, 1fr);
         grid-template-areas:
@@ -167,18 +185,30 @@
           'forecast-day-name forecast-main'
           'forecast-icon forecast-description'
           'forecast-icon forecast-description';
-        border-right: 0.2rem solid var.$color-3;
-        border-bottom: 0.2rem solid var.$color-3;
+
+        &:last-child {
+          border-bottom: none;
+          @include mi.borderRight;
+        }
       }
       .active-day {
         border-right: none;
-        border-bottom: 0.2rem solid var.$color-3;
+        @include mi.borderBottom;
       }
     }
   }
   .forecast-day {
     grid-area: forecast-day;
   }
+
+  .forecast-day-short {
+    display: inline;
+  }
+
+  .forecast-day-full {
+    display: none;
+  }
+
   .forecast-icon {
     grid-area: forecast-icon;
   }
@@ -195,16 +225,25 @@
     grid-area: forecast-description;
   }
 
+  .forecast-temp-hour {
+    margin-top: 0;
+  }
+
   .forecast-hourly {
     height: auto;
     width: 50%;
     ul {
       grid-template-rows: repeat(8, 1fr);
       grid-template-columns: 1fr;
+
       li {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
+        @include mi.borderBottom;
       }
+    }
+    img {
+      max-width: 3.5rem;
     }
   }
 }
